--- a/src/app/components/layout/home/index.css
+++ b/src/app/components/layout/home/index.css
@@ -1,13 +1,8 @@
-.main {
-  color: red;
+.main-div {
   width: 100%;
+  height: 90vh;
   display: flex;
   align-items: center;
-  justify-content: flex-start;
-}
-
-.side-bar {
-  width: 20%;
-  max-width: 310px;
-  background-color: aqua;
+  justify-content: center;
+  font-size: 20px;
 }
