--- a/src/app/components/layout/menu/index.css
+++ b/src/app/components/layout/menu/index.css
@@ -1,8 +1,6 @@
 .nav-menu {
-  background-color: #060b26;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  flex-direction: column;
   width: 100%;
   height: 100vh;
 }
@@ -12,7 +10,13 @@
   justify-content: start;
   align-items: center;
 }
-
+.image{
+  width: 100%;
+  margin-top: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 .menu-bars {
   margin-left: 2rem;
   font-size: 2rem;
@@ -46,7 +50,11 @@
 
 .nav-menu-items {
   width: 100%;
+  height: 100%;
   padding: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .navbar-toggle {
