--- a/src/app/index.css
+++ b/src/app/index.css
@@ -9,5 +9,22 @@
   width: 230px;
 }
 
+.main-content {
+  width: 100%;
+}
 .content {
+  width: 100%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+
+.header {
+  height: 80px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 40px;
+  font-family:Georgia, 'Times New Roman', Times, serif;
 }
